# ParsianStack

./: .gitignore  README.md
parsian_ssl/parsian_msgs/: CMakeLists.txt  package.xml
parsian_ssl/parsian_protobuf_wrapper/: CMakeLists.txt  package.xml
parsian_ssl/parsian_protobuf_wrapper/include/parsian_protobuf_wrapper/common/net/: robocup_ssl_client.h  udpsend.h
parsian_ssl/parsian_protobuf_wrapper/include/parsian_protobuf_wrapper/grsim/: grsim_node.h
parsian_ssl/parsian_protobuf_wrapper/include/parsian_protobuf_wrapper/proto/: grSim_Commands.pb.cc  grSim_Commands.pb.h  grSim_Packet.pb.cc  grSim_Packet.pb.h  grSim_Replacement.pb.cc  messages_robocup_ssl_detection.pb.cc  messages_robocup_ssl_geometry.pb.cc  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_refbox_log.pb.cc
parsian_ssl/parsian_protobuf_wrapper/src/common/net/: robocup_ssl_client.cpp  udpsend.cpp
parsian_ssl/parsian_protobuf_wrapper/src/grsim/: grsim_exec.cpp  grsim_node.cpp
parsian_ssl/parsian_util/: CMakeLists.txt
parsian_ssl/parsian_util/include/parsian_util/core/: field.h  knowledge.h
parsian_ssl/parsian_util/include/parsian_util/knowledge/: general.h
parsian_ssl/parsian_util/params/: config_params.yaml
parsian_ssl/parsian_util/src/core/: field.cpp
parsian_ssl/parsian_util/src/knowledge/: general.cpp
parsian_ws/src/parsian_gui/: CMakeLists.txt  package.xml
parsian_ws/src/parsian_gui/include/parsian_gui/interface/: interface_node.h
parsian_ws/src/parsian_gui/include/parsian_gui/interface/application/: aplication_thread.h  extern_variables.h  main_window.h
parsian_ws/src/parsian_gui/include/parsian_gui/interface/application/widgets/: base_widget.h
parsian_ws/src/parsian_gui/include/parsian_gui/interface/application/widgets/dynamic_reconfigure/: dynamic_reconfigure.h  param_widget.h
parsian_ws/src/parsian_gui/include/parsian_gui/interface/application/widgets/graphical_client/: field.h  gltext.h  soccerview.h
parsian_ws/src/parsian_gui/include/parsian_gui/interface/application/widgets/plotter/: plotter.h  plotterwidget.h  texturecache.h
parsian_ws/src/parsian_gui/qss/: param_widget.qss
parsian_ws/src/parsian_gui/resources/: mainwindow.ui  param_widget.qss  plotter.ui
parsian_ws/src/parsian_gui/src/interface/: interface_exec.cpp  interface_node.cpp
parsian_ws/src/parsian_gui/src/interface/application/: aplication_thread.cpp  main_window.cpp
parsian_ws/src/parsian_gui/src/interface/application/widgets/: base_widget.cpp
parsian_ws/src/parsian_gui/src/interface/application/widgets/dynamic_reconfigure/: dynamic_reconfigure.cpp  param_widget.cpp
parsian_ws/src/parsian_gui/src/interface/application/widgets/graphical_client/: field.cpp  gltext.cpp  soccerview.cpp
parsian_ws/src/parsian_gui/src/interface/application/widgets/plotter/: guitimer.cpp  leaffilterproxymodel.cpp  plot.cpp  plotter.cpp  plotterwidget.cpp  texturecache.cpp  timer.cpp
parsian_ws/src/parsian_msgs/: CMakeLists.txt  package.xml
parsian_ws/src/parsian_msgs/msg/: ParsianWorldModel.msg
parsian_ws/src/parsian_protobuf_wrapper/: CMakeLists.txt  package.xml
parsian_ws/src/parsian_protobuf_wrapper/include/parsian_protobuf_wrapper/common/net/: robocup_ssl_client.h
parsian_ws/src/parsian_protobuf_wrapper/include/parsian_protobuf_wrapper/grsim/: grsim_node.h
parsian_ws/src/parsian_protobuf_wrapper/include/parsian_protobuf_wrapper/proto/: grSim_Commands.pb.h  grSim_Packet.pb.h  grSim_Replacement.pb.cc  grSim_Replacement.pb.h  messages_robocup_ssl_detection.pb.h  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_refbox_log.pb.h  messages_robocup_ssl_wrapper.pb.cc  messages_robocup_ssl_wrapper.pb.h  referee.pb.cc  referee.pb.h
parsian_ws/src/parsian_protobuf_wrapper/include/parsian_protobuf_wrapper/vision/: vision_node.h
parsian_ws/src/parsian_protobuf_wrapper/include/parsian_protobuf_wrapper/vision/convert/: convert_detection.h  convert_geometry.h
parsian_ws/src/parsian_protobuf_wrapper/src/common/net/: netraw.cpp  robocup_ssl_client.cpp  udpsend.cpp
parsian_ws/src/parsian_protobuf_wrapper/src/grsim/: grsim_exec.cpp  grsim_node.cpp
parsian_ws/src/parsian_protobuf_wrapper/src/vision/: vision_exec.cpp  vision_node.cpp
parsian_ws/src/parsian_protobuf_wrapper/src/vision/convert/: convert_detection.cpp  convert_geometry.cpp  convert_units.cpp
parsian_ws/src/parsian_util/: CMakeLists.txt  package.xml
parsian_ws/src/parsian_util/include/parsian_util/core/: field.h  knowledge.h
parsian_ws/src/parsian_util/include/parsian_util/geom/: angle_deg.h  circle_2d.h  geom.h  line_2d.h  matrix_2d.h  polygon_2d.h  ray_2d.h  rect_2d.h  region_2d.h  sector_2d.h  segment_2d.h  size_2d.h  triangle_2d.h  vector_2d.h
parsian_ws/src/parsian_util/include/parsian_util/math/: mathtools.h
parsian_ws/src/parsian_util/scripts/: env.zsh
parsian_ws/src/parsian_util/src/core/: field.cpp  knowledge.cpp
parsian_ws/src/parsian_util/src/geom/: angle_deg.cpp  circle_2d.cpp  geom.cpp  line_2d.cpp  matrix_2d.cpp  polygon_2d.cpp  ray_2d.cpp  rect_2d.cpp  region_2d.cpp  sector_2d.cpp  segment_2d.cpp  size_2d.cpp  triangle_2d.cpp  vector_2d.cpp
parsian_ws/src/parsian_util/src/math/: mathtools.cpp  matrix.cpp
parsian_ws/src/parsian_util/tools/launch/: grsim_launch.py
parsian_ws/src/parsian_util/tools/params/: config_params.yaml
parsian_ws/src/parsian_world_model/: CMakeLists.txt  package.xml
parsian_ws/src/parsian_world_model/include/parsian_world_model/worldmodel/: worldmodel_node.h
parsian_ws/src/parsian_world_model/include/parsian_world_model/worldmodel/util/: balltracker.h  config.h  kalman.h  newkalman.h  robottracker.h  tracker.h
parsian_ws/src/parsian_world_model/src/worldmodel/: worldmodel_exec.cpp  worldmodel_node.cpp
parsian_ws/src/parsian_world_model/src/worldmodel/util/: balltracker.cpp  kalman.cpp  robottracker.cpp  tracker.cpp
parsian_ws/src/parsian_world_model/src/worldmodel/wm/: ball.cpp  halfworld.cpp  movingobject.cpp  rawobject.cpp  robot.cpp  visionbelief.cpp  visionclient.cpp  worldmodel.cpp
(+8 files in other folders)
